# ds-ticat

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.project_setup_scripts/: project_init.sh
data/: training_data.jsonl
infrastructure/containers/: Dockerfile_IntegrationTests  docker-compose.yml  template.yaml
infrastructure/containers/utils/: container_client_utils.py
infrastructure/containers/utils/container_debug_utils/: README.md  install_debug_utils.sh  uninstall_debug_utils.sh
infrastructure/ecr/: ecr.tf  variables.tf
infrastructure/lambda/: Dockerfile_lambda  README.md  lambda_flask_wrapper.py  lambda_handler.py  main.tf  outputs.tf  template.yaml  variables.tf
infrastructure/lambda/commands/: invoke.sh
infrastructure/lambda/events/: lambda-input.json  new-review.json
infrastructure/sagemaker/: Dockerfile_sagemaker  entrypoint.py  inference_handler.py  model_handler.py  service.config
notebooks/: project_explorer.ipynb
src/ds_ticat/: Greetingfilter.py  ModelManager.py  Stopwordfilter.py  TextPreProcessor.py  main.py
src_labs/experiment_tracking/: comet_tracker.py  credentials_helper.py  experiment_tracker.py  meta_tracker.py  mlflow_tracker.py  neptune_tracker.py  w_and_b_tracker.py
test/: __init__.py  test_main.py
test/integration/: test_lambda_goldenpath.py  test_sagemaker_goldenpath.py
test/integration/utils/: wait_for_service.py
